--- a/hw3/styles.css
+++ b/hw3/styles.css
@@ -13,6 +13,38 @@ h1 {
   text-align: center;
 }
 
+section {
+  margin: auto;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-evenly;
+}
+
+div.card {
+  width: 200px;
+  border: none;
+  text-align: center;
+  justify-content: center;
+  background-color: var(--cyan);
+}
+
+img {
+  padding: 0.5rem;
+  width: 12.5rem;
+  height: 14rem;
+}
+
+.container {
+  padding: 0;
+  max-width: 800px;
+}
+
+.card:hover {
+  border-radius: 0;
+  color: var(--white);
+  background-color: var(--blue);
+}
+
 .donut-chart {
   border-radius: 0.8rem;
   background-color: var(--white);
